tests/toy/neg/001085_mutation.toylang
program a = { if a then sleep var; } .
